# usecase-python-plugin

./: README.md
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
core/: pyproject-setuptools.toml  pyproject.toml
core/core/: __init__.py  animal.py  animals_manager.py  plugin_manager.py
final/: pyproject-setuptools.toml  pyproject.toml  test_demo.py
final/final/: __init__.py  demo.py
plugin/: pyproject-setuptools.toml  pyproject.toml
plugin/plugin/: __init__.py  animals.py  functions.py
