[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "core-plugin-system"
version = "0.1.0"
description = "Core plugin system with entrypoint discovery"
authors = [{name = "User", email = "user@example.com"}]
requires-python = ">=3.9"
dependencies = []

[project.entry-points."core.plugins"]
# Entry point group for plugins

[tool.poetry]
name = "core-plugin-system"
version = "0.1.0"
description = "Core plugin system with entrypoint discovery"
authors = ["User <user@example.com>"]
packages = [{include = "core"}]

[tool.poetry.dependencies]
python = "^3.9"


