[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "final-demo"
version = "0.1.0"
description = "Final demo project using core plugin system"
authors = [{name = "User", email = "user@example.com"}]
requires-python = ">=3.9"
dependencies = [
    "core-plugin-system"
]

[tool.poetry]
name = "final-demo"
version = "0.1.0"
description = "Final demo project using core plugin system"
authors = ["User <user@example.com>"]
packages = [{include = "final"}]

[tool.poetry.dependencies]
python = "^3.9"
core-plugin-system = {path = "../core", develop = true}


