[tool.poetry]
name = "plugin-hello"
version = "0.1.0"
description = "Hello world plugin for core plugin system"
authors = ["User <user@example.com>"]
packages = [{include = "plugin"}]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.plugins."core.plugins"]
hello_world = "plugin.functions:hello_world"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
