[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "plugin-hello"
version = "0.1.0"
description = "Hello world plugin for core plugin system"
authors = [{name = "User", email = "user@example.com"}]
requires-python = ">=3.9"
dependencies = [
    "core-plugin-system"
]

[project.entry-points."core.plugins"]
cow = "plugin.animals:Cow"

[tool.poetry]
name = "plugin-hello"
version = "0.1.0"
description = "Hello world plugin for core plugin system"
authors = ["User <user@example.com>"]
packages = [{include = "plugin"}]

[tool.poetry.dependencies]
python = "^3.9"
core-plugin-system = {path = "../core", develop = true}


